# tg-log

./: .env  .gitignore  Cargo.toml  README.md  TELEGRAM_SETUP.md  flake.nix
.sass-cache/12f106cc2b49f4aa42aaf6012c49d407b88596e7/: main.scssc
devshell/: default.nix
src/: app.rs  chat.rs  cli_auth.rs  config.rs  lib.rs  main.rs  telegram.rs
style/: main.scss
