[package]  
name = "tglog"  
version = "0.1.0"  
edition = "2021"  

[dependencies]
grammers-client = { version = "0.7.0", features = ["markdown", "html"] }
grammers-session = "0.7.0"
once_cell = "1.21.3"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
